yamtrack-media-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yamtrack
  labels:
    app: yamtrack
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: yamtrack
  template:
    metadata:
      annotations:
        version/latest: "A"
      labels:
        app: yamtrack
    spec:
      containers:
        - name: redis
          image: redis:8-alpine
          imagePullPolicy: Always
          volumeMounts:
            - name: redis-data
              mountPath: /data
        - name: yamtrack
          image: ghcr.io/fuzzygrim/yamtrack
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
      volumes:
        - name: redis-data
          emptyDir: {}
      restartPolicy: Always
