yamtrack-media-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yamtrack-frontend
spec:
  selector:
    app: yamtrack
  ports:
    - name: http
      port: 8000
      targetPort: 8000
