yamtrack-media-tracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yamtrack
  labels:
    app: yamtrack
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - paula.atlantishq.de
      secretName: yamtrack-tls
  rules:
    - host: paula.atlantishq.de
      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: yamtrack
                port:
                  number: 8000
